src/tests/testfiles/variable-declarations/1.txt
testfiles/variable-declarations/1.c:3:9: error: Identifier a already taken by variable
float a;
      ^
